# wiser-rs

./: Cargo.toml  LICENSE  README.md  note.md
db-manager/: Cargo.toml  database.sql
db-manager/src/: lib.rs
inverst-list/: Cargo.toml
inverst-list/src/: lib.rs  ngrame.rs
source/: example.xml
src/: main.rs  primitive.rs  token.rs
src/db/: mod.rs
src/postings/: mod.rs  postings_create.rs
wiser/: Cargo.toml
wiser/src/: main.rs
xml-parse/: Cargo.toml
